removed part of media query to get it to trigger on iphone, removed cursor turnery from card.js, as no longer using custom cursor

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -161,9 +161,8 @@ iframe {
 /***************** media queries *******************/
 
 @media only screen
-  and (min-width: 360px)
+  and (min-width: 320px)
   and (max-width: 768px)
-  and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: portrait){
     .gameContainer {
         width: 100vw;
@@ -178,7 +177,6 @@ iframe {
 @media only screen
   and (min-width: 360px)
   and (max-width: 768px)
-  and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: landscape) {
       .gameContainer {
           max-width: 100%;
