--- a/src/assets/css/card-css.css
+++ b/src/assets/css/card-css.css
@@ -17,7 +17,7 @@
     transition: all .5s ease-in-out;
 }
 
-.card:hover{
+.card:hover {
     cursor: pointer;
 }
 
@@ -53,7 +53,6 @@
 @media only screen
   and (min-width: 360px)
   and (max-width: 768px)
-  and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: portrait){
     .row {
         height: 15vh;
@@ -72,7 +71,6 @@
 @media only screen
   and (min-width: 360px)
   and (max-width: 768px)
-  and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: landscape) {
       .row {
           height: 22vh;
